Fixing issue with spacing that has cropped up for Guide Cards, mobile. Issue introduced when padding was modified for guide cards desktop.

--- a/CancerGov/_src/StyleSheets/mediaqueries/small.scss
+++ b/CancerGov/_src/StyleSheets/mediaqueries/small.scss
@@ -48,6 +48,9 @@
     padding-left: 3px !important;
     padding-right: 24px !important;
 }
+	.guide-card {
+		padding: 0;	
+	}
 	/** CTHP styles **/
 	.cthp-body {
     float: none;
